--- a/package.json
+++ b/package.json
@@ -1,51 +1,56 @@
 {
   "name": "reflexa",
   "main": "expo-router/entry",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "scripts": {
-    "start": "expo start --tunnel --clear"
+    "start": "expo start --tunnel --clear",
+    "build": "eas build --platform android --profile preview",
+    "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@gorhom/bottom-sheet": "^4.6.4",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-clipboard/clipboard": "^1.16.3",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-navigation/native": "^7.1.6",
     "date-fns": "^4.1.0",
-    "expo": "^53.0.4",
-    "expo-blur": "~14.1.4",
+    "expo": "53.0.18",
+    "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.4",
     "expo-file-system": "~18.1.10",
     "expo-font": "~13.3.0",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.1.6",
+    "expo-image": "~2.3.0",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
-    "expo-linking": "~7.1.4",
-    "expo-local-authentication": "~16.0.4",
-    "expo-location": "~18.1.4",
+    "expo-linking": "~7.1.7",
+    "expo-local-authentication": "~16.0.5",
+    "expo-location": "~18.1.6",
     "expo-print": "~14.1.4",
-    "expo-router": "~5.0.3",
+    "expo-router": "~5.1.0",
     "expo-sharing": "~13.1.5",
-    "expo-splash-screen": "~0.30.7",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
-    "expo-system-ui": "~5.0.6",
-    "expo-web-browser": "~14.1.6",
+    "expo-system-ui": "~5.0.10",
+    "expo-web-browser": "~14.2.0",
     "lucide-react-native": "^0.475.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.1",
+    "react-native": "0.79.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.12.0",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gifted-charts": "^1.4.61",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "^3.3.0",
-    "react-native-safe-area-context": "5.3.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-share": "^12.0.11",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
     "recharts": "^2.15.3",
     "zustand": "^5.0.2"
@@ -56,6 +61,7 @@
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
     "@expo/ngrok": "^4.1.0",
+    "@tsconfig/react-native": "^3.0.6",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
   },
